--- a/index.html
+++ b/index.html
@@ -8,65 +8,63 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <h1>🌐 Laman Pribadi Kapita Selekta</h1>
-    <p>Oleh <strong>Novia Fitriana Huda | 2215061024</strong></p>
+  <header class="header">
+    <h1>🚀 Catatan Kapita Selekta</h1>
+    <p>Oleh <strong>M. Da'i Hakiki | 2255061001</strong></p>
     <nav>
       <a href="index.html" class="active">Beranda</a>
       <a href="konsepDasar.html">Konsep Dasar</a>
-      <a href="strategicPlan.html">Strategic Plan</a>
+      <a href="strategicPlan.html">Business Plan</a>
       <a href="kekuatan.html">Prioritas Internet</a>
       <a href="opensource.html">Open Source</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero">
-    <div class="hero-text">
-      <h2>Selamat Datang 👋</h2>
-      <p>
-        Website ini saya buat sebagai dokumentasi tugas <strong>Kapita Selekta</strong>. 
-        Di dalamnya berisi rangkuman materi, analisis strategis, hingga refleksi pribadi.
-        Tujuan utama saya adalah membangun pemahaman tentang bagaimana teknologi, bisnis, 
-        dan filosofi open source dapat berkontribusi bagi dunia yang semakin terhubung.
-      </p>
-    </div>
+    <h2>Selamat Datang 👋</h2>
+    <p>
+      Website ini berisi hasil eksplorasi saya di mata kuliah <strong>Kapita Selekta</strong>. 
+      Di sini saya membahas teori dasar, strategi bisnis dengan SWOT & Porter, 
+      refleksi 10 kekuatan pendatar dunia, hingga filosofi open source 
+      yang membentuk cara saya memandang teknologi.
+    </p>
   </section>
 
-  <!-- Ringkasan Materi -->
+  <!-- Materi Ringkasan -->
   <main>
-    <h2 class="center">📚 Ringkasan Materi</h2>
-    <div class="cards">
+    <h2 class="center">📚 Materi yang Dibahas</h2>
+    <div class="grid">
       <div class="card">
-        <h3>Konsep Dasar Kapita Selekta</h3>
-        <p>Mata kuliah yang melatih berpikir kritis, analitis, dan sistematis 
-           dalam menghubungkan teori dengan praktik nyata.</p>
-        <a href="konsepDasar.html" class="btn">Baca Selengkapnya</a>
+        <h3>🧩 Konsep Dasar</h3>
+        <p>Memahami arti penting Kapita Selekta sebagai dasar berpikir kritis dan 
+           menghubungkan teori dengan realitas.</p>
+        <a href="konsepDasar.html" class="btn">Lihat</a>
       </div>
       <div class="card">
-        <h3>Business Strategic Plan</h3>
-        <p>Analisis SWOT & Porter’s Five Forces untuk memahami kekuatan, peluang, 
-           ancaman, dan strategi bersaing di era digital.</p>
-        <a href="strategicPlan.html" class="btn">Baca Selengkapnya</a>
+        <h3>📊 Strategic Plan</h3>
+        <p>Analisis SWOT dan Porter untuk mengukur kekuatan, kelemahan, peluang, 
+           ancaman, serta strategi di era digital.</p>
+        <a href="strategicPlan.html" class="btn">Lihat</a>
       </div>
       <div class="card">
-        <h3>Prioritas Internet</h3>
-        <p>Menggali 10 kekuatan dunia yang meratakan persaingan global 
-           menurut Friedman, dan menentukan prioritas pribadi.</p>
-        <a href="kekuatan.html" class="btn">Baca Selengkapnya</a>
+        <h3>🌐 Prioritas Internet</h3>
+        <p>Menggali 10 Flatteners ala Friedman, serta memilih prioritas penggunaan 
+           internet yang relevan bagi saya.</p>
+        <a href="kekuatan.html" class="btn">Lihat</a>
       </div>
       <div class="card">
-        <h3>Filosofi Open Source</h3>
-        <p>Filosofi berbagi, transparansi, dan kolaborasi yang menjadi dasar 
-           berkembangnya teknologi modern.</p>
-        <a href="opensource.html" class="btn">Baca Selengkapnya</a>
+        <h3>💻 Open Source</h3>
+        <p>Filosofi berbagi, transparansi, dan kolaborasi; serta refleksi 
+           bagian mana yang saya jadikan prioritas pribadi.</p>
+        <a href="opensource.html" class="btn">Lihat</a>
       </div>
     </div>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Novia Fitriana Huda | Kapita Selekta</p>
+    <p>© 2025 | M. Da'i Hakiki - Laman Tugas Kapita Selekta</p>
   </footer>
 </body>
 </html>
