--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header class="header">
     <h1>🚀 Catatan Kapita Selekta</h1>
-    <p>Oleh <strong>M. Da'i Hakiki | 2255061001</strong></p>
+    <p>Oleh <strong>Novia Fitriana Huda | 2255061001</strong></p>
     <nav>
       <a href="index.html" class="active">Beranda</a>
       <a href="konsepDasar.html">Konsep Dasar</a>
@@ -64,7 +64,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 | M. Da'i Hakiki - Laman Tugas Kapita Selekta</p>
+    <p>© 2025 | Novia Fitriana Huda - Laman Tugas Kapita Selekta</p>
   </footer>
 </body>
 </html>
